--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
 
         <div id="hidden-templates">
             <div class="template-task-new">
-                <div class="task-new" contenteditable="contenteditable">Enter text here</div>
+                <div class="task-new" contenteditable="true"></div>
                 <div class="button-container">
                     <span class="button btn-cancel">Cancel</span> 
                     <span class="button btn-save">Save</span>
