--- a/public/css/main.css
+++ b/public/css/main.css
@@ -162,40 +162,25 @@ div.task:hover {
 /** Modal */
 .template-task-details {
     display: none;
-
-    position: absolute;
-    top: 0px;
+    position: fixed;
+    z-index: 1;
     left: 0px;
+    top: 0px;
     width: 100%;
     height: 100%;
+    background-color: rgba(0,0,0,0.5);
 
-    padding-top: 50px;
-    /*
-    xxbackground-color: #000;
-    xxz-index: 10;
-    xxopacity: 0.5;
-    */
+    padding-top: 20px;
+    overflow: auto; /* Enable scroll if needed */
 }
 
 .task-details-content {
-    /*
-    z-index: 20;
-    opacity: 1;
-    */
-    margin-left: auto;
-    margin-right: auto;
-    
-    width: 500px;
-    min-height: 450px;
+    margin: 5% auto;
+    width: 70%;
+    max-width: 500px;
     padding: 15px 19px 15px 13px;
-    
-    /*
-    margin-left: auto;
-    margin-right: auto;
-    */
     background-color: #f9f9f9; /* #d5f5f3; */
     border: 1px solid #CCC;
-
     font-family: 'Helvetica Neue', sans-serif;
 }
 
@@ -206,6 +191,9 @@ div.tdc-label {
 div.tdc-description {
     margin-bottom: 20px;
     height: 380px;
+}
+div.tdc-archive {
+    margin-bottom: 20px;
 }
 
 input.tdc-label {
@@ -231,4 +219,29 @@ textarea.tdc-description {
 }
 .tdc-button-cancel {
     float: left;
+}
+
+/* ARCHIVE *******************************************************************/
+
+.archived-tasks h3 {
+    padding: 5px 7px 4px;
+    background-color: #1D8348;
+    color: white;
+    font-weight: normal;
+    width: 60px;
+    margin-bottom: 0px;
+}
+
+.archived-tasks-content {
+    padding: 5px 7px;
+    background-color: rgba(255, 255, 255, 0.6);
+    min-height: 20px; /* For when there are no archived tasks */
+}
+
+div.archived-task {
+    background-color: #D5F5E3;
+    padding: 4px;
+    margin: 4px 2px;
+    display: inline-block;
+    cursor: pointer;
 }
