--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,8 @@
                 <%= heading %>
             </div>
             <div class="nav">
-                <span class="nav-item btn-row-new">+ Add row</span>
+                <span class="nav-item nav-row-new">+ Add row</span>
+                <span class="nav-item nav-task-new">+ Add task</span>
             </div>
         </div>
 
