--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
             </div>
             <div class="nav">
                 <span class="nav-item nav-row-new">+ Add row</span>
-                <span class="nav-item nav-task-new">+ Add task</span>
+                <span class="nav-item nav-task-new action-task-new">+ Add task</span>
             </div>
         </div>
 
@@ -45,8 +45,38 @@
             </tr>
         </table>
 
+        <div class="history-container">
+            <h3 class="section-heading">History</h3>
+            <table class="history">
+                <tr>
+                    <td class="cell-0">
+                    </td>
+                    <th class="history-col">Todo
+                    </th>
+                    <th class="history-col">Blocked
+                    </th>
+                    <th class="history-col">In progress
+                    </th>
+                    <th class="history-col">Done
+                    </th>
+                </tr>
+                <tr class="row">
+                    <th class="row-heading trans-bg"><span class="row-label">Homepage</span></th>
+                    <td class="task-group trans-bg">
+                        <div class="task">"Hero" section</div>
+                    </td>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg">
+                        <div class="task">"4 post" section</div>
+                        <div class="task">"7 post" section</div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
         <div class="archived-tasks">
-            <h3>Archive</h3>
+            <h3 class="section-heading">Archive</h3>
             <div class="archived-tasks-content">
             </div>
         </div>
