--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
         </table>
 
         <div class="history-container">
-            <h3 class="section-heading">History</h3>
+            <h3 class="section-heading">Archived rows</h3>
             <table class="history">
                 <tr>
                     <td class="cell-0">
@@ -61,22 +61,59 @@
                     </th>
                 </tr>
                 <tr class="row">
+                    <th class="row-heading trans-bg"><span class="row-label">Video SEO</span></th>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg">
+                        <div class="task task-archived">Expired videos: embeds</div>
+                        <div class="task task-archived">Expired videos: don't 404</div>
+                        <div class="task task-archived">Video sitemap</div>
+                    </td>
+                </tr>
+                <tr class="row">
+                    <th class="row-heading trans-bg"><span class="row-label">US posts</span></th>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg">
+                        <div class="task task-archived">US RSS</div>
+                        <div class="task task-archived">Filter trending widget by US</div>
+                        <div class="task task-archived">Filter sidebar by US</div>
+                        <div class="task task-archived">Filter news feed by US</div>
+                    </td>
+                </tr>
+                <tr class="row">
+                    <th class="row-heading trans-bg"><span class="row-label">Commercial / July</span></th>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg"></td>
+                    <td class="task-group trans-bg">
+                        <div class="task task-archived">Mediatrust</div>
+                        <div class="task task-archived">Ad close-ups</div>
+                        <div class="task task-archived">Video player: pubads domain</div>
+                        <div class="task task-archived">Tablet landscape: special_overlay_oop</div>
+                        <div class="task task-archived">FBIA recirculation slot</div>
+                        <div class="task task-archived">ads.txt</div>
+                    </td>
+                </tr>
+                <tr class="row">
                     <th class="row-heading trans-bg"><span class="row-label">Homepage</span></th>
                     <td class="task-group trans-bg">
-                        <div class="task">"Hero" section</div>
+                        <div class="task task-archived">"Hero" section</div>
                     </td>
                     <td class="task-group trans-bg"></td>
                     <td class="task-group trans-bg"></td>
                     <td class="task-group trans-bg">
-                        <div class="task">"4 post" section</div>
-                        <div class="task">"7 post" section</div>
+                        <div class="task task-archived">"4 post" section</div>
+                        <div class="task task-archived">"7 post" section</div>
                     </td>
                 </tr>
             </table>
         </div>
 
         <div class="archived-tasks">
-            <h3 class="section-heading">Archive</h3>
+            <h3 class="section-heading">Archived cards</h3>
             <div class="archived-tasks-content">
             </div>
         </div>
