--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="node_modules/dragula/dist/dragula.min.css">
+        <link rel="stylesheet" href="css/vendor/dragula.min.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script src="node_modules/socket.io-client/dist/socket.io.min.js"></script>
+        <script src="js/vendor/socket.io.min.js"></script>
     </head>
     <body class="wb-socketio-config" data-api="/">
         <!--[if lt IE 8]>
@@ -122,7 +122,7 @@
             <div class="template-task-new">
                 <div class="task-new" contenteditable="true"></div>
                 <div class="button-container">
-                    <span class="button btn-cancel" title="[Esc]">Cancel</span> 
+                    <span class="button btn-cancel" title="[Esc]">Cancel</span>
                     <span class="button btn-save" title="[CMD + Enter]">Save</span>
                 </div>
                 <!-- TODO: When there is an existing task below the new task, the buttons overlap :( -->
@@ -133,7 +133,7 @@
             <div class="task-details-content modal-content">
                 <div><input type="text" name="label" class="tdc-label form-label"></div>
                 <div><textarea name="description" class="tdc-description form-textarea"></textarea></div>
-                <div class="tdc-archive form-archive">Archive <input type="checkbox" name="archive" class="tdc-archive form-archive"></div> 
+                <div class="tdc-archive form-archive">Archive <input type="checkbox" name="archive" class="tdc-archive form-archive"></div>
                 <div class="modal-buttons tdc-buttons">
                     <input type="button" class="modal-cancel tdc-button-cancel" value="Cancel" title="[Esc]">
                     <!-- <input type="button" class="tdc-button-archive" value="Archive"> -->
@@ -153,7 +153,7 @@
                     </select>
                 </div>
                 <div><textarea name="info" class="trc-info form-textarea" placeholder="Any additional info"></textarea></div>
-                
+
                 <div class="modal-buttons trc-buttons">
                     <input type="button" class="modal-cancel trc-button-cancel" value="Cancel" title="[Esc]">
                     <input type="button" class="modal-save trc-button-save" value="Save" title="[CMD + Enter]">
@@ -163,7 +163,7 @@
 
         <!-- <div id="modal-placeholder"></div> -->
 
-        <script src="node_modules/dragula/dist/dragula.min.js"></script>
+        <script src="js/vendor/dragula.min.js"></script>
         <script src="js/vendor/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
